// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Graph3D snapshots matches canonical graph mapping snapshot with low-trust edge 1`] = `
<pre
  data-testid="force-graph-mock"
>
  {
  "nodes": [
    {
      "id": "n-1",
      "entityType": "Concept",
      "clusterId": 0,
      "color": "#F7DC6F",
      "val": 13.954451150103322
    },
    {
      "id": "n-2",
      "entityType": "Method",
      "clusterId": 1,
      "color": "#BB8FCE",
      "val": 17.14213562373095
    }
  ],
  "links": [
    {
      "id": "e-1",
      "source": "n-1",
      "target": "n-2",
      "relationshipType": "APPLIES_TO",
      "isLowTrust": true,
      "isGhost": false,
      "weight": 0.52,
      "confidence": 0.45
    }
  ]
}
</pre>
`;

exports[`Graph3D snapshots matches ghost-edge enabled snapshot 1`] = `
<pre
  data-testid="force-graph-mock"
>
  {
  "nodes": [
    {
      "id": "n-1",
      "entityType": "Concept",
      "clusterId": 0,
      "color": "#F7DC6F",
      "val": 13.954451150103322
    },
    {
      "id": "n-2",
      "entityType": "Method",
      "clusterId": 1,
      "color": "#BB8FCE",
      "val": 17.14213562373095
    }
  ],
  "links": [
    {
      "id": "e-1",
      "source": "n-1",
      "target": "n-2",
      "relationshipType": "APPLIES_TO",
      "isLowTrust": true,
      "isGhost": false,
      "weight": 0.52,
      "confidence": 0.45
    },
    {
      "id": "ghost-n-1-n-2-0",
      "source": "n-1",
      "target": "n-2",
      "relationshipType": "POTENTIAL",
      "isGhost": true,
      "weight": 0.81
    }
  ]
}
</pre>
`;
